--- a/XYZReader/src/main/res/values/colors.xml
+++ b/XYZReader/src/main/res/values/colors.xml
@@ -18,8 +18,18 @@
 <resources>
     <color name="photo_placeholder">#ccc</color>
 
-    <color name="theme_primary">#04561A</color>
+   <!-- <color name="theme_primary">#04561A</color>
     <color name="theme_primary_dark">#04561A</color>
     <color name="theme_accent">#04561A</color>
-    <color name="ltgray">#ffe0e0e0</color>
+    <color name="red_background">#ff3300</color>-->
+    <color name="ltgray">#a6a6a6</color>
+
+    <color name="red300">#EE8879</color>
+    <color name="red500">#E65540</color>
+    <color name="red700">#DF4432</color>
+
+    <color name="green_a200">#AEFDD8</color>
+    <color name="green_a800">#41F997</color>
+    
+
 </resources>
