--- a/XYZReader/src/main/res/values/macro_layout.xml
+++ b/XYZReader/src/main/res/values/macro_layout.xml
@@ -3,6 +3,8 @@
     <dimen name="list_side_margin">4dp</dimen>
     <dimen name="list_toolbar_side_margin">0dp</dimen>
     <integer name="list_column_count">2</integer>
+    <dimen name="article_name_text_size">14sp</dimen>
+    <bool name="show_article_subtitle">false</bool>
 
     <!-- detail -->
     <bool name="detail_is_card">false</bool>
