--- a/XYZReader/src/main/res/layout/activity_article_list.xml
+++ b/XYZReader/src/main/res/layout/activity_article_list.xml
@@ -2,22 +2,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="168dp"
-        android:background="?colorPrimary"
-        android:id="@+id/app_bar_layout">
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:fitsSystemWindows="true"
+        android:id="@+id/app_bar_layout"
+        android:elevation="@dimen/appbar_elevation">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/collapsing_toolbar_layout"
-            app:collapsedTitleTextAppearance="@style/Base.TextAppearance.AppCompat.Inverse"
-            app:expandedTitleTextAppearance="@style/Base.TextAppearance.AppCompat.Inverse"
+            android:fitsSystemWindows="true"
             app:expandedTitleMarginStart="72dp"
+            app:contentScrim="?colorPrimary"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
@@ -25,6 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitEnd"
+                app:layout_collapseMode="parallax"
                 android:src="@drawable/ic_newspaper1"/>
 
             <View
