--- a/XYZReader/src/main/res/values-sw600dp-land/macro_layout.xml
+++ b/XYZReader/src/main/res/values-sw600dp-land/macro_layout.xml
@@ -1,9 +1,9 @@
 <resources>
     <!-- detail -->
     <bool name="detail_is_card">true</bool>
-    <dimen name="article_name_text_size">22sp</dimen>
     <bool name="show_article_subtitle">true</bool>
 
+    <integer name="list_column_count">3</integer>
 
     <dimen name="detail_photo_height">600dp</dimen>
     <dimen name="detail_card_top_margin">256dp</dimen>
